--- a/views/c&n/exchangeRequests.ejs
+++ b/views/c&n/exchangeRequests.ejs
@@ -11,6 +11,7 @@
             margin: 0;
             font-family: 'Arial';
         }
+
         /* Sidebar styles */
         .sidebar {
             height: 100%;
@@ -112,7 +113,8 @@
 
     </div>
     <div class="content">
-        <h1 style="display: flex; justify-content: center; align-items: center; margin-right: 122px;">Xác nhận yêu cầu đổi nfts</h1>
+        <h1 style="display: flex; justify-content: center; align-items: center; margin-right: 122px;">Xác nhận yêu cầu
+            đổi nfts</h1>
         <a href="https://shyft-insider.vercel.app/" target="_blank" class="transaction-link">Chi tiết giao dịch</a>
         <div id="resultDiv"></div>
         <table>
@@ -126,36 +128,46 @@
                 </tr>
             </thead>
             <tbody>
-                <% exchangeRequests.forEach((request, index) => { %>
-                <tr>
-                    <td><%= index + 1 %></td>
-                    <td><%= request.userId %></td>
-                    <td><%= request.nftId %></td>
-                    <td><%= request.requestTime %></td>
-                    <td>
-                        <form id="confirmForm_<%= request._id %>" action="/confirmExchange" method="post">
-                            <input type="hidden" name="requestId" value="<%= request._id %>">
-                            <% if (request.confirmed) { %>
-                            <span>Đã xác nhận</span>
-                            <% } else { %>
-                            <button type="button" onclick="confirmExchange('<%= request._id %>', '<%= request.nftId %>', '<%= request.userId %>')">Confirm Exchange</button>
-                            <% } %>
-                        </form>
-                    </td>
-                </tr>
-                <% }); %>
+                <% exchangeRequests.forEach((request, index)=> { %>
+                    <tr>
+                        <td>
+                            <%= index + 1 %>
+                        </td>
+                        <td>
+                            <%= request.userId %>
+                        </td>
+                        <td>
+                            <%= request.nftId %>
+                        </td>
+                        <td>
+                            <%= request.requestTime %>
+                        </td>
+                        <td>
+                            <form id="confirmForm_<%= request._id %>" action="/confirmExchange" method="post">
+                                <input type="hidden" name="requestId" value="<%= request._id %>">
+                                <% if (request.confirmed) { %>
+                                    <span>Đã xác nhận</span>
+                                    <% } else { %>
+                                        <button type="button"
+                                            onclick="confirmExchange('<%= request._id %>', '<%= request.nftId %>', '<%= request.userId %>')">Confirm
+                                            Exchange</button>
+                                        <% } %>
+                            </form>
+                        </td>
+                    </tr>
+                    <% }); %>
             </tbody>
         </table>
     </div>
 
     <script>
         const private_k = "LZ91L7MUzNhKsrwnLucoAQC1U4ZLnGrw5qNWQQmg7LzQcHX6XBAuwnxw4b4L61YiBSkGm7UWvEQt2rLNJRTc2vA";
-        
+
         function confirmExchange(requestId, nftId, userId) {
             var myHeaders = new Headers();
             myHeaders.append("x-api-key", "Z0s1HomCTG-Ppn--");
             myHeaders.append("Content-Type", "application/json");
-    
+
             var raw = JSON.stringify({
                 "network": "devnet",
                 "token_address": nftId,
@@ -165,22 +177,22 @@
                 "fee_payer": "9FWUokoE27tEtaxCvcUwQwQdtY5bbzcgqX7miKct1geS",
                 "priority_fee": 100
             });
-    
+
             var requestOptions = {
                 method: 'POST',
                 headers: myHeaders,
                 body: raw,
                 redirect: 'follow'
             };
-    
+
             fetch("https://api.shyft.to/sol/v1/nft/transfer_detach", requestOptions)
                 .then(response => response.text())
                 .then(result => {
                     console.log(result);
                     alert('NFTs transferred successfully');
-    
+
                     document.getElementById('resultDiv').innerHTML = `<p>Private Key: ${private_k}</p><p>Result: ${result}</p>`;
-    
+
                     signTransaction(private_k, result, requestId);
                 })
                 .catch(error => {
@@ -188,19 +200,23 @@
                     alert('Error transferring NFTs');
                 });
         }
-    
+
         function signTransaction(private_k, encodedTransaction, requestId) {
             console.log("Encoded Transaction:", encodedTransaction);
             console.log("Private Key:", private_k);
 
-            const transaction = solanaWeb3.Transaction.from(Uint8Array.from(atob(encodedTransaction), c => c.charCodeAt(0)));
+            const encodedTx = encodedTransaction.result.encoded_transaction;
+
+            const decodedTx = atob(encodedTx);
+
+            const transaction = solanaWeb3.Transaction.from(Uint8Array.from(decodedTx, c => c.charCodeAt(0)));
             const signedTransaction = transaction.sign(solanaWeb3.Keypair.fromSecretKey(Uint8Array.from(atob(private_k), c => c.charCodeAt(0))));
-    
+
             const connection = new solanaWeb3.Connection("https://api.devnet.solana.com");
             connection.sendRawTransaction(signedTransaction.serialize()).then(signature => {
                 console.log('Transaction signature:', signature);
                 alert('Transaction submitted successfully');
-    
+
                 fetch("/api/notf/confirmExchange", {
                     method: "POST",
                     headers: {
@@ -210,26 +226,26 @@
                         requestId: requestId
                     })
                 })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        var form = document.getElementById("confirmForm_" + requestId);
-                        form.innerHTML = "<span>Đã xác nhận</span>";
-                    } else {
-                        alert(data.message);
-                    }
-                })
-                .catch(error => {
-                    console.error("Error confirming exchange:", error);
-                    alert("Error confirming exchange");
-                });
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            var form = document.getElementById("confirmForm_" + requestId);
+                            form.innerHTML = "<span>Đã xác nhận</span>";
+                        } else {
+                            alert(data.message);
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error confirming exchange:", error);
+                        alert("Error confirming exchange");
+                    });
             }).catch(error => {
                 console.error('Error while submitting transaction:', error);
                 alert('Error while submitting transaction');
             });
         }
     </script>
-    
+
 </body>
 
 </html>
