--- a/views/c&n/exchangeRequests.ejs
+++ b/views/c&n/exchangeRequests.ejs
@@ -208,6 +208,7 @@
             // Kiểm tra xem encodedTransaction có giá trị không
             if (encodedTransaction && encodedTransaction.result && encodedTransaction.result.encoded_transaction) {
                 const encodedTx = encodedTransaction.result.encoded_transaction;
+                console.log("Encoded Tx before decoding:", encodedTx);
 
                 const decodedTx = atob(encodedTx);
                 console.log(decodedTx);
