--- a/views/blockchain/getAllnfts.ejs
+++ b/views/blockchain/getAllnfts.ejs
@@ -85,7 +85,7 @@
     <script>
         async function getAllNFTs() {
             const myHeaders = new Headers();
-            myHeaders.append("x-api-key", "Z0s1HomCTG-Ppn--");
+            myHeaders.append("x-api-key", "O37RXk2u7RIYdj5E");
 
             const requestOptions = {
                 method: 'GET',
@@ -93,7 +93,7 @@
                 redirect: 'follow'
             };
 
-            const apiUrl = "https://api.shyft.to/sol/v1/nft/read_all?network=devnet&address=9FWUokoE27tEtaxCvcUwQwQdtY5bbzcgqX7miKct1geS&update_authority=9FWUokoE27tEtaxCvcUwQwQdtY5bbzcgqX7miKct1geS";
+            const apiUrl = "https://api.shyft.to/sol/v1/nft/read_all?network=devnet&address=DZkW5YeDqC1xCeYrHqTa7a34wVsntPqkXtNj9R14Jnre&update_authority=DZkW5YeDqC1xCeYrHqTa7a34wVsntPqkXtNj9R14Jnre";
 
             try {
                 const response = await fetch(apiUrl, requestOptions);
