--- a/views/blockchain/nft.ejs
+++ b/views/blockchain/nft.ejs
@@ -9,8 +9,15 @@
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
 
     <style>
+        body {
+            margin: 0;
+            font-family: 'VT323', monospace;
+        }
+
         /* Sidebar styles */
 
         .sidebar {
