--- a/views/blockchain/getAllnfts.ejs
+++ b/views/blockchain/getAllnfts.ejs
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get All NFTs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
     <style>
+        body {
+            margin: 0;
+            font-family: 'VT323', monospace;
+        }
+
         .list-group-item {
             padding-bottom: 1rem;
         }
@@ -76,7 +83,7 @@
         <a href="https://tt-sp24.onrender.com/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
     </div>
 
-    <h1 class="mt-5 mb-4 centered">Danh sách nfts</h1>
+    <h1 class="mt-5 mb-4 centered">Danh sách NFTs</h1>
 
     <a href="https://tt-sp24.onrender.com/nft/mintNfts" >mintNfts</a>
 
