--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -7,11 +7,14 @@
     <title>Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
+
 
     <style>
         body {
             margin: 0;
-            font-family: 'Arial';
+            font-family: 'VT323', monospace;
         }
 
         /* Sidebar styles */
@@ -70,10 +73,10 @@
         <h3 style="margin-left: 800px; margin-top: 50px;">Welcome to...</h3>
     </div>
 
-    <!-- <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
-        <source src="/mp4-server.mp4" type="video/mp4">
+    <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
+        <source src="/menu.mp4" type="video/mp4">
         Your browser does not support the video tag.
-    </video> -->
+    </video>
 
     <!-- <img src="https://t3.ftcdn.net/jpg/04/22/15/54/360_F_422155424_TTgMW6tuAcoKtpoZdaSv5J6sfdtybCPu.jpg" alt="" style="display: flex; align-items: center; justify-content: center; margin-right: 35px;">a -->
 
