--- a/views/test/getAllTests.ejs
+++ b/views/test/getAllTests.ejs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Tests</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
     <style>
         body {
             margin: 0;
-            /* font-family: 'Arial'; */
+            font-family: 'VT323', monospace;
             display: flex;
         }
 
@@ -103,35 +105,37 @@
         <p id="totalTests">Total Tests: <%= totalTests %></p>
         <% } %>
 
-        <a href="https://tt-sp24.onrender.com/test/create">Add New Test</a>
+        <a href="https://tt-sp24.onrender.com/test/create" class="btn btn-primary mt-3">Add New Test</a>
 
         <% tests.forEach(test => { %>
-            <div>
-                <h2><%= test.name %></h2>
-                <img src="<%= test.image %>" alt="Test Image" style="max-width: 100%;">
-                <p><strong>Category:</strong> <%= test.category.name %></p>
-                <% if (test.questions && test.questions.length > 0) { %>
-                    <% test.questions.forEach(question => { %>
-                        <div>
-                            <p><strong>Question:</strong> <%= question.content %></p>
-                            <ul>
-                                <% question.answers.forEach(answer => { %>
-                                    <li>
-                                        <%= answer.answer %> -
-                                        <% if (answer.correct === 'true') { %>
-                                            <span style="color: green;">True</span>
-                                        <% } else { %>
-                                            <span style="color: red;">False</span>
-                                        <% } %>
-                                    </li>
-                                <% }); %>
-                            </ul>
-                        </div>
-                    <% }); %>
-                <% } else { %>
-                    <p>No questions found for this test</p>
-                <% } %>
-                <a href="https://tt-sp24.onrender.com/test/update/<%= test._id %>">Update</a>
+            <div class="card mt-3">
+                <div class="card-body">
+                    <h2 class="card-title"><%= test.name %></h2>
+                    <img src="<%= test.image %>" alt="Test Image" class="card-img-top" style="max-width: 100%;">
+                    <p class="card-text"><strong>Category:</strong> <%= test.category.name %></p>
+                    <% if (test.questions && test.questions.length > 0) { %>
+                        <% test.questions.forEach(question => { %>
+                            <div>
+                                <p><strong>Question:</strong> <%= question.content %></p>
+                                <ul class="list-unstyled">
+                                    <% question.answers.forEach(answer => { %>
+                                        <li>
+                                            <%= answer.answer %> -
+                                            <% if (answer.correct === 'true') { %>
+                                                <span style="color: green;">True</span>
+                                            <% } else { %>
+                                                <span style="color: red;">False</span>
+                                            <% } %>
+                                        </li>
+                                    <% }); %>
+                                </ul>
+                            </div>
+                        <% }); %>
+                    <% } else { %>
+                        <p>No questions found for this test</p>
+                    <% } %>
+                    <a href="https://tt-sp24.onrender.com/test/update/<%= test._id %>" class="btn btn-primary">Update</a>
+                </div>
             </div>
         <% }); %>
         
