--- a/views/test/createTest.ejs
+++ b/views/test/createTest.ejs
@@ -97,10 +97,10 @@
     <div class="sidebar">
         <div class="sidebar-nav-link active">
             <div style="width: 100px; height: 100px; overflow: hidden; border-radius: 50%; margin-bottom: 10px;">
-                <img src="<%= user.avatar %>" alt="User Avatar" style="width: 100%; height: auto;">
+                <img src="" alt="User Avatar" style="width: 100%; height: auto;">
             </div>
             <p style="margin-bottom: 1em;">
-                <%= user.email %>
+                
             </p>
         </div>
 
