--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -52,7 +52,7 @@
             align-items: center;
             height: 100vh;
             position: absolute;
-            top: 50%;
+            top: calc(50% + 150px);
             left: 50%;
             transform: translate(-50%, -50%);
         }
